<resources>
    <string name="app_name">Flying Bartende</string>
    <string name="welcome">Welcome</string>
    <string name="user_type">What type of user are you?</string>

    <string name="login">Login</string>
    <string name="login_">Please log in to your account</string>
    <string name="username">Username / Email id</string>
    <string name="email">Enter email</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_pass">Forgot Password ?</string>
    <string name="not_ac">Dont have a account?<b></b></string>

    <string name="create_password">Create a password</string>
    <string name="createPassword">Create Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="already_ac">Already have an account ? <b><font color='black'></font></b></string>
    <string name="sign_up_">New account creation</string>
    <string name="email_">Email ID</string>
    <string name="egplus">I am 18+</string>
    <string name="ac_help">Account Help!</string>
    <string name="ac_op">Account recovery options</string>
    <string name="select">Select Method</string>
    <string name="submit">Submit</string>
    <string name="verif">Verification</string>
    <string name="verify">Verify</string>
    <string name="enter_pwd">Enter your Email</string>
    <string name="sign_up">Sign up</string>
    <string name="basic_info">Basic Information</string>
    <string name="submit_detail">Submit details to Flying BartenderDelivery</string>
    <string name="fullname">Full Name</string>
    <string name="choose_location">Choose Location</string>
    <string name="select_location">Select your location to serve you better</string>
    <string name="current_location">Current Location</string>
    <string name="using_gps">Using GPS</string>
    <string name="saved_add">Saved Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_going">Keep the party going</string>
    <string name="track_delivery">Track your delivery in real time</string>
    <string name="faster_than">Faster than you can think</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Get Started</string>
    <string name="other_rec_option">Other Recovery Options</string>
    <string name="or">Or</string>
    <string name="other_option">Use other recovery option or contact our sevice assistant from our help</string>
    <string name="no_data">No data found</string>
    <string name="search_in_thousand_of_products">Search in thousand of products</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="popular_products">Popular Products</string>
    <string name="cigrate">Cigarette</string>
    <string name="premium_listing">Premium Listing</string>
    <string name="recommended">Recommended</string>
    <string name="feed">Feeds</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="chat">chat</string>
    <string name="more_to_love">More to Love</string>
    <string name="my_favorites">My Foavorites</string>
    <string name="deals_4">Deals(4)</string>
    <string name="items_20">Items(20)</string>
    <string name="stores_10">Stores(10)</string>
    <string name="open_my_cart"><![CDATA[Open My Cart >]]></string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="distance">Distance</string>
    <string name="deal_of_the_day">Deal of The Day</string>
    <string name="inbox">Inbox</string>
    <string name="messages_230">Messages(230)</string>
    <string name="coupons_23">Coupons(23)</string>
    <string name="promotions_10">Promotions(10)</string>
    <string name="open_coupons"><![CDATA[open Coupons >]]></string>
    <string name="new_messages">New Messages</string>
    <string name="description">Description</string>
    <string name="free_ice">Free Ice</string>
    <string name="free_drink">Free Drink</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="view_all">View all</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="similar_products">Similar Products</string>
    <string name="i_m_shopping_for">I\'m shopping for....</string>
    <string name="out_pick_for_you">Out Pick for you</string>
    <string name="stores">Stores</string>
    <string name="search">Search</string>
    <string name="featured">Featured</string>
    <string name="username_email_id">Username / Email ID</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="didn_t_recieved_the_code_resend_again">Didn\'t recieved the code ? Resend Again</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="are_you_thirsty">Are you thirsty?....</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="brands">Brands</string>
    <string name="amount">Amount</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="manage_address">Manage Address</string>
    <string name="saved_address">Saved Address</string>
    <string name="edit">Edit</string>
    <string name="my_cart">My Cart</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="already_added">Already Added</string>
    <string name="apply_promo_code">APPLY PROMO CODE</string>
    <string name="enter_code_here">Enter Code Here</string>
    <string name="cancel">Cancel</string>
    <string name="apply">APPLY</string>
    <string name="change">Change</string>
    <!--   <string name="api_key">AIzaSyDB-DSxcKUzV8bNwFlAafIgGvXRAj1X0CU</string>-->
    <!-- <string name="api_key">AIzaSyCuG870vhPFpBPVy50_iYdQNWtCmuxH-xo</string>-->
    <string name="api_key">AIzaSyCJuMnRukkohrMxeK_zcN8pbdzUuCHa-PE</string>
    <string name="address">Address</string>
    <string name="reviews">Reviews</string>
    <string name="show_more">Show More</string>


</resources>