<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountHelpActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bartenderbg">

        <ImageView
            android:id="@+id/ivBack"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ac_help"
            android:textSize="30sp"
            android:layout_marginLeft="15dp"
            android:textColor="#00243F"
            android:fontFamily="@font/sfprodisplay_semibold"
            android:layout_marginBottom="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/ac_op"/>
        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/select"/>

            <EditText
                android:id="@+id/etEmailAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/text_border"
                android:padding="10dp"
                android:hint="jabari@gmail.com"
                android:inputType="textEmailAddress"
                android:maxLength="30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/or"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_200"
                android:text="@string/other_rec_option"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/other_option"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:minHeight="40dp"
                android:layout_marginTop="30dp"
                android:gravity="right|end"
                android:orientation="horizontal"
                android:showDividers="middle">


        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPwdChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/enter_pwd"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:textSize="13sp"
                    android:inputType="textPassword"
                    android:id="@+id/etPwdNew" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textSize="13sp"
                    android:inputType="textPassword"
                    android:id="@+id/etPwdConfirm" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/grey"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:minHeight="40dp"
            android:layout_marginTop="30dp"
            android:gravity="right|end"
            android:orientation="horizontal"
            android:showDividers="middle">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentEnd="true"
          android:backgroundTint="@color/red"
            android:textStyle="bold"
            android:fontFamily="@font/sfprodisplay_semibold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>