<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".activities.NewLoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bartenderbg">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:layout_marginLeft="15dp"
                android:textColor="#00243F"
                android:fontFamily="@font/sfprodisplay_semibold"
                android:layout_marginBottom="12dp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/login_"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_email_id"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:maxLength="30"
                        android:id="@+id/etEmail" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/grey"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="13sp"
                        android:maxLength="30"
                        android:inputType="textPassword"
                        android:id="@+id/etPwd" />

                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/grey"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/cbRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:paddingStart="10dp"
                    android:button="@drawable/checkboxstyle"
                    android:text="@string/remember_me"/>


                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/forget_pass"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/ivFb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fbb"/>

                <ImageView
                    android:id="@+id/ivTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/twitter"/>

                <ImageView
                    android:id="@+id/ivGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gmail"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_ac"
                    android:id="@+id/not_ac"
                    android:onClick="navigateToSignUp"
                    android:layout_marginStart="16dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SignUp"
                    android:id="@+id/signup"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:onClick="navigateToSignUp"
                    android:layout_toRightOf="@id/not_ac"
                    android:layout_marginStart="16dp"
                    android:layout_centerVertical="true" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/red"
                    android:textStyle="bold"
                    android:fontFamily="@font/sfprodisplay_semibold" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>



</ScrollView>